[package]
name = "pwner"
edition = "2018"
version = "0.1.2"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
readme = "README.md"
keywords = ["process", "pipe", "async", "tokio"]
repository = "https://github.com/m-lima/pwner"
categories = ["asynchronous", "concurrency"]
description = "Pwner is a Process Owner crate that allows ergonomic access to child processes"
license-file = "LICENSE"

[features]
default = []
async = [ "tokio" ]

[dependencies]
tokio = { version = "0.2", features = [ "io-util", "process", "rt-core", "time" ], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.17" }

[[example]]
name = "simple-async"
path = "examples/simple_async.rs"
required-features = [ "async" ]

[dev-dependencies]
crossbeam = "0.2"
tokio = { version = "0.2", features = [ "io-std", "macros" ] }
