[package]
name = "pwner"
edition = "2018"
version = "0.1.5"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
readme = "README.md"
keywords = ["process", "pipe", "async", "tokio"]
repository = "https://github.com/m-lima/pwner"
categories = ["asynchronous", "concurrency"]
description = "Pwner is a Process Owner crate that allows ergonomic access to child processes"
license = "MIT"

[features]
default = []

[dependencies]
tokio = { version = "0.3", features = [ "io-util", "process", "rt", "time" ], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.19" }

[[example]]
name = "simple-async"
path = "examples/simple_async.rs"
required-features = [ "tokio" ]

[[example]]
name = "interactive"
path = "examples/interactive.rs"
required-features = [ "tokio" ]

[dev-dependencies]
crossbeam = "0.8"
tokio = { version = "0.3", features = [ "io-std", "macros" ] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = [ "tokio" ]
