[package]
name = "pwner"
edition = "2021"
version = "0.1.8"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
readme = "README.md"
keywords = ["process", "pipe", "async", "tokio"]
repository = "https://github.com/m-lima/pwner"
categories = ["asynchronous", "concurrency"]
description = "Pwner is a Process Owner crate that allows ergonomic access to child processes"
license = "MIT"

[features]
default = []

[dependencies]
tokio = { version = "1.21", features = [ "io-util", "process", "rt", "time" ], optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[[example]]
name = "simple-async"
path = "examples/simple_async.rs"
required-features = [ "tokio" ]

[[example]]
name = "interactive"
path = "examples/interactive.rs"
required-features = [ "tokio" ]

[dev-dependencies]
crossbeam = "0.8.2"
tokio = { version = "1.21.2", features = [ "io-std", "macros" ] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = [ "tokio" ]
